--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,11 @@ header{
 	align-items:center;
 	justify-content: space-around;
 	flex-wrap:wrap;
+	margin-bottom: 40px;
 
 }
+
+/* logo */
 
 #header-img{
 	max-height: 40px;
@@ -27,7 +30,7 @@ header{
 
 #header-max{
 	margin-left: 5px;
-	color: #2980b9;;
+	color: #2980b9;
 	font-family: 'Russo One', sans-serif;
 }
 
@@ -50,14 +53,103 @@ h1{
 
 
 
-ul{
+#nav-bar ul{
 	display:flex;
 	flex-direction: row;
 	width: 100%;
 	justify-content: space-around;
 }
 
-li{
+#nav-bar li{
 	margin-left : 50px;
 	list-style:none;
+}
+
+a:link{
+	color:#666;
+	text-decoration:none;
+}
+
+a:hover{
+	color: #2980b9;
+}
+
+a:visited{
+	color: #666;
+}
+/* signup form */
+
+#form{
+	background-color: #ecf0f1;
+	display:flex;
+	flex-wrap:wrap;
+	flex-direction: column;
+	max-width: 300px;
+	margin:0 auto;
+	border-radius: 2px;
+}
+
+#signupLabel{
+	text-align: center;
+	font-weight: bold;
+	padding: 20px;
+	color: #3498db;
+}
+
+#form input{
+	margin-bottom: 10px;
+	padding: 5px;
+	font-size: 16px;
+}
+
+#form label{
+	color: #666;
+}
+
+.form-item{
+	width: 80%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+}
+
+.space-top{
+	margin-top:20px;
+}
+#submit{
+	width: 80%;
+	margin: 0 auto;
+	padding:10px;
+	border-radius: 30px;
+	background-color: #3498db;
+	color: white;
+	font-size: 16px;
+	border-style: none;
+}
+
+#submit:hover{
+	background-color: #2980b9;
+}
+
+#submit:visited{
+	background-color: #3498db;
+}
+
+#form-foot{
+	width: 100%;
+	background-color: #3498db;
+	margin-top:30px;
+	color: white;
+
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: space-around;
+	width: 100%;
+}
+
+#form-foot li{
+	list-style:none;
+	padding: 30px;
+	font-size: 20px;
 }
