--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,10 @@ html, body{
 	padding:0;
 	margin:0;
 	font-family: 'Roboto', sans-serif;
-	background-color: #7f8c8d;
+	background-color: #fff;
+	min-height: 100%;
 }
+
 
 header{
 	min-height: 75px;
@@ -16,8 +18,13 @@ header{
 	align-items:center;
 	justify-content: space-around;
 	flex-wrap:wrap;
-	margin-bottom: 40px;
+	position:fixed;
+	top:0;
+	min-width: 100%;
 
+	@media (max-width: 600px){
+		position:relative;
+	}
 }
 
 /* logo */
@@ -35,7 +42,7 @@ header{
 }
 
 #header-fit{
-	color:#f1c40f;
+	color:#f39c12;
 	font-family: 'Righteous', cursive;
 	text-shadow: 2px 2px 0 2px #000;
 }
@@ -77,7 +84,12 @@ a:hover{
 a:visited{
 	color: #666;
 }
+
 /* signup form */
+
+main{
+	margin-top:120px;
+}
 
 #form{
 	background-color: #ecf0f1;
@@ -93,12 +105,13 @@ a:visited{
 	text-align: center;
 	font-weight: bold;
 	padding: 20px;
-	color: #3498db;
+	color: #2980b9;
+	font-size: 24px;
 }
 
 #form input{
 	margin-bottom: 10px;
-	padding: 5px;
+	padding: 5px; 
 	font-size: 16px;
 }
 
@@ -121,23 +134,23 @@ a:visited{
 	margin: 0 auto;
 	padding:10px;
 	border-radius: 30px;
-	background-color: #3498db;
+	background-color: #f39c12;
 	color: white;
 	font-size: 16px;
 	border-style: none;
 }
 
 #submit:hover{
-	background-color: #2980b9;
+	background-color: #e67e22;
 }
 
 #submit:visited{
-	background-color: #3498db;
+	background-color: #f39c12;
 }
 
 #form-foot{
 	width: 100%;
-	background-color: #3498db;
+	background-color: #f39c12;
 	margin-top:30px;
 	color: white;
 
@@ -153,3 +166,111 @@ a:visited{
 	padding: 30px;
 	font-size: 20px;
 }
+
+#form-foot li:hover{
+	color: #aaa;
+}
+
+/* Video */
+
+.video{
+	margin-top:50px;
+	display: flex;
+	justify-content: center;
+}
+
+
+/*bootcamp*/
+
+#bootcamp{
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+	margin-top: 50px;
+
+}
+
+.bootcampBox{
+	background-color: #ecf0f1;
+	display: flex;
+	flex-direction: column;
+	justify-content:center;
+	min-width: 200px;
+	padding:20px;
+	text-align: center;
+	margin: 10px;
+}
+
+.bootcampBox i{
+	font-size: 40px;
+	color: #2980b9;
+}
+
+
+.smallP{
+	text-align: center;
+}
+
+.bigP{
+	font-size: 50px;
+	margin-top:0px;
+	font-weight:bold;
+}
+
+/* boot button */
+
+.select{
+	width: 80%;
+	margin: 0 auto;
+	padding:10px;
+	border-radius: 30px;
+	background-color: #f39c12;
+	color: white;
+	font-size: 16px;
+	border-style: none;
+}
+
+.select:hover{
+	background-color: #e67e22;
+}
+
+.select:visited{
+	background-color: #f39c12;
+}
+
+
+/*footer*/
+footer{
+	margin-top: 50px;
+	margin-bottom: 0px;
+	min-width: 100%;
+	background-color: #f39c12;
+	padding-top: 20px;
+	bottom: 0;
+}
+
+footer p{
+	font-size: 10px;
+	display: flex;
+	justify-content: flex-end;
+	
+}
+
+#footer-label{
+	width:100%;
+	display:flex;
+	justify-content: center;
+}
+
+#footer-max{
+	font-size: 40px;
+	color: #2980b9;
+	font-family: 'Russo One', sans-serif;
+}
+
+#footer-fit{
+	font-size: 40px;
+	color:#fff;
+	font-family: 'Righteous', cursive;
+}
+
